--- a/src/components/profileList/ProfileList.css
+++ b/src/components/profileList/ProfileList.css
@@ -6,6 +6,7 @@
   color: #fff;
   background-color: var(--primary);
   left: 50%;
+  margin-top: 15px;
 }
 
 
